@@ -1,8 +1,8 @@
 Package: memisc
 Type: Package
 Title: Management of Survey Data and Presentation of Analysis Results
-Version: 0.99.25.5
-Date: 2020-06-30
+Version: 0.99.25.6
+Date: 2020-07-07
 Author: Martin Elff (with contributions from Christopher N. Lawrence, Dave Atkins, Jason W. Morgan, Achim Zeileis)
 Maintainer: Martin Elff <memisc@elff.eu>
 Description: An infrastructure for the management of survey data including
@@ -23,6 +23,6 @@ URL:
         http://www.elff.eu/software/memisc/,http://github.com/melff/memisc/
 BugReports: http://github.com/melff/memisc/issues
 NeedsCompilation: yes
-Packaged: 2020-06-30 15:13:44 UTC; elff
+Packaged: 2020-07-07 19:43:32 UTC; elff
 Repository: CRAN
-Date/Publication: 2020-06-30 19:00:07 UTC
+Date/Publication: 2020-07-08 06:20:27 UTC
